<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="name.syndarin.devicemanager.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_setup_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:id="@+id/text_admin_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_enable_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_become_admin"
            />

        <TextView
            android:gravity="center"
            android:id="@+id/text_accessory_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_enable_accessibility_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_accessibility_settings"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_unlock"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_1111_pin_to_disable_control"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:id="@+id/edit_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_disable_control"
            android:text="@string/disable_control"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_vpn_disabled"
        android:id="@+id/text_vpn_description"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use VPN"
        android:id="@+id/cb_use_vpn"/>
</LinearLayout>
